# vpn

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  REALITY_SETUP.md  amneziawg_install.yml  config.json.example  deploy_vpn.yml  env.example  install_docker.yml  servers.cfg  servers.cfg.example  test_reality.py  test_reality_config.json  test_reality_real.py  ubuntu_dist_upgrade.yml  ubuntu_release_upgrade.yml
doc/: CLEANUP_SUMMARY.md  COMPACTION_INTEGRATION.md  INTEGRATION_SUMMARY.md  README_COMPACTOR.md  RUNBOOK_deploy.md  RUNBOOK_dpi_failover.md
vpn/: Caddyfile.j2  caddy.json.j2  docker-compose.yml.j2  generate_reality_keys.py  generate_singbox_keys.py  hysteria.yaml.j2  json-exporter.yml  sing-box.json.j2  users.json  xray.json.j2
vpn/caddy/: Dockerfile
vpn/cfgapp/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  test_env.py  test_password_from_query.py  test_reality_generation.py  test_url_format.py
vpn/cfgapp/examples/: clash_with_auth.tpl  clash_with_proxies.tpl  happ.tpl  shadowrocket.tpl
vpn/cfgapp/src/: __init__.py  auth.py  clash_processor.py  config.py  happ_processor.py  main.py  processor.py  proxy_config.py  utils.py
vpn/cfgapp/templates/: subscription.html
vpn/cfgapp/tests/: __init__.py  test_auth.py  test_clash_processor.py  test_clash_processor_integration.py  test_compactor.py  test_happ_processor.py  test_main.py  test_processor.py  test_proxy_config.py  test_shadowrocket.py  test_sr_endpoint.py  test_subscription_page.py  test_utils.py
vpn/static/: 401.html  404.html  5xx.html  README.md  index.html  styles.css  test.html
vpn/static/css/: style.css
