[tool.poetry]
name = "cfgapp"
version = "0.1.0"
description = "Python application for proxy rule processing and NETSET expansion"
authors = ["Dmitrii Balabanov <dimonb@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
httpx = "^0.28.1"
aiohttp = "^3.12.15"
ipaddress = "^1.0.23"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
black = "^25.1.0"
ruff = "^0.12.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501", "B008"]



[tool.black]
target-version = ['py312']
line-length = 88
